# kanidm-operator

./: .editorconfig  .gitignore  CA.crt  CA.key  Dockerfile  KanidmCA.crt  KanidmCA.key  README.md  helmify.sh  mkdocs.yml  pyproject.toml  start.py  test.yaml
.github/workflows/: dockerhub-cd.yaml  docs.yaml  testing.yaml
docs/: developing.md  getting-started.md  index.md
docs/crds/: group.md  kanidm.md  oauth2-client.md  user.md
docs/upgrading/: kanidm-1.10.md
kanidm_operator/: __init__.py  auth.py  deployer.py
kanidm_operator/deploy/: account.py  group.py  kanidm.py  oauth2client.py  user.py  util.py
kanidm_operator/templates/: deployment.yaml  ingress.yaml  oauth2secret.yaml  pvc-backups.yaml  pvc-db.yaml  server.toml  userjob.yaml
kanidm_operator/typing/: kanidm.py  oauth2client.py  user.py
manifests/crds/: group.yaml  kandim.yaml  kanidm.yaml  kustomization.yaml  oauth2-client.yaml  user.yaml
manifests/example/: groups.yaml  kanidm.yaml  kustomization.yaml  namespace.yaml  oauth2-client-grafana.yaml  oauth2-client.yaml  users.yaml
manifests/operator/: cluster-role.yaml  deployment.yaml  kustomization.yaml  role.yaml
tests/: cluster-issuer.yaml  helpers.py  kanidm_operator  kind-config.yaml  test_kanidm_operator.py  test_server_config.py
tests/fixtures/: oauth2-forgejo.yaml
