[tool.poetry]
name = "kanidm_operator"
version = "1.2.5"
description = "Kubernetes Operator to manage Kanidm resources"
authors = ["sbordeyne <simon.bordeyne@gmail.com>", "toastedcrumpets <m.bannerman@gmail.com>", "juniorfoo <joey@schwerv.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "kanidm_operator"}]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "^28.1.0"
kopf = "^1.37.2"
jinja2 = "^3.1.2"
pyyaml = "^6.0.1"
async-timeout = "^4.0.3"

[tool.poetry.group.dev.dependencies]
pylama = "^8.4.1"
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
