[tool.poetry]
name = "kanidm_operator"
version = "1.2.6"
description = "Kubernetes Operator to manage Kanidm resources"
authors = ["sbordeyne <simon.bordeyne@gmail.com>", "toastedcrumpets <m.bannerman@gmail.com>", "juniorfoo <joey@schwerv.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "kanidm_operator"}]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "^28.1.0"
kopf = "^1.37.5"
jinja2 = "^3.1.6"
pyyaml = "^6.0.2"
async-timeout = "^4.0.3"

[tool.poetry.group.dev.dependencies]
pylama = "^8.4.1"
pytest = "^7.4.4"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
